--- a/links/commerrs.html
+++ b/links/commerrs.html
@@ -17,28 +17,6 @@ infinity, differential"><base href="http://www.math.vanderbilt.edu/~schectex/com
 border=0  align="right"  alt="(img: no Netscape 6)" 
 hspace=10 vspace=10> -->
 
-<font size="1">
-I have <a href="http://www.math.vanderbilt.edu/~schectex/">several web pages intended for students</a>; this seems to be the most popular one. <b>FONTS FINALLY REPAIRED</b> November 2009.</font><p><font size="1">
-
-<b>Browser adjustments:</b> This web page uses 
-<sub>sub</sub>scripts, <sup>super</sup>scripts,  and <a href="http://www.alanwood.net/demos/symbol.html">unicode symbols</a>. The latter may display
-incorrectly on your computer if you
-are using an old browser and/or an old operating system.
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<b>Note to teachers</b>
-(and anyone else who is interested): 
-Feel free to link to this page (<a href="http://www.altavista.com/cgi-bin/query?q=link%3Amath.vanderbilt.edu%2F%7Eschectex%2Fcommerrs%2F&amp;kl=XX&amp;pg=q&amp;Translate=on">around 500 people have done so</a>), tell your students about this page, or
-copy (with appropriate citation) parts or all of this
-page.  You can do those things without writing to me. 
-But if you have anything else to say about this page,
-please  <a href="mailto:eric.schechter@vanderbilt.edu?subject=Common%20Errors%20in%20Math">write
-to me</a> with your questions, comments, or suggestions.  I will
-reply when I have time, though that might not be
-immediately -- recently I've been swamped with other
-work.
- -- <a href="http://www.math.vanderbilt.edu/%7Eschectex/">Eric 
-Schechter</a>, version of 11 Nov 2009.
-
 
 </font></p><p></p><hr noshade=""><p></p><h1 align="center"><b>THE
  MOST  COMMON  ERRORS  IN <br> UNDERGRADUATE
@@ -115,13 +93,18 @@ including
 
 (There is some overlap among these topics, so I
 recommend reading the whole page.)
-... Of related interest:  <a href="http://www.mathmistakes.com/">Paul Cox's web page</a>,
-and the books of  <a href="http://store.yahoo.com/doverpublications/048640918x.html">Bradis, Minkovskii, and Kharcheva</a>
-and
-<a href="http://www.cup.org/ObjectBuilder/ObjectBuilder.iwx?ProcessName=ProductPage&amp;Merchant_Id=1&amp;product_id=0-521-05700-0&amp;origin=search&amp;searchField=TITLE&amp;searchString=Fallacies%20in%20Mathematics">E. A. Maxwell</a>.
-<p></p>
-Ultimately, what are the sources of errors and of misunderstanding? What kinds of biases and erroneous preconceptions do we have? Two of my favorite historic discoveries are Einstein's discovery of relativity and Cantor's discoveries of some of the most basic rules of infinities. These discoveries are remarkable in that neither involved long, involved, complicated computations. Both are fairly simple, in retrospect, to anyone who has studied them. But both involved "thinking outside the box" par excellence -- i.e., seeing past the assumptions that were inherent in our culture and our language. As philosopher John Culkin said, "We don't know who discovered water, but we are certain it wasn't a fish." That certain mathematical errors are common among students may be partly a consequence of biases that are built into our language and culture, some of which we aren't even aware of.
 
+Ultimately, what are the sources of errors and of misunderstanding? What kinds of
+biases and erroneous preconceptions do we have? Two of my favorite historic discoveries
+are Einstein's discovery of relativity and Cantor's discoveries of some of the most
+basic rules of infinities. These discoveries are remarkable in that neither involved
+long, involved, complicated computations. Both are fairly simple, in retrospect,
+to anyone who has studied them. But both involved "thinking outside the box" par
+excellence -- i.e., seeing past the assumptions that were inherent in our culture
+and our language. As philosopher John Culkin said, "We don't know who discovered water,
+but we are certain it wasn't a fish." That certain mathematical errors are common among
+students may be partly a consequence of biases that are built into our language and
+culture, some of which we aren't even aware of.
 
 <p></p><hr noshade=""><p>
 </p><h2>Errors in Communication</h2>
@@ -219,15 +202,14 @@ later."
 
 </p><p></p><hr noshade="" width="50%"><p>
 
-<font size="2">
-<a href="mailto:mmims@bigfoot.com">Marc Mims</a>
-sent me this anecdote about unasked questions:</font>
+Marc Mims
+sent me this anecdote about unasked questions:
 
-</p><p></p><blockquote><font size="1">
+</p><p></p><blockquote>
 
 In the early 1980s, I managed a computer retail store. 
 Several of my employees were college students.  One
-bright your man was having difficulty with his Freshman
+bright young man was having difficulty with his Freshman
 college algebra class.  I tutored him and he did very
 well, but invariably, he would say, "the professor worked
 through this problem on the board, and it was <i>nothing</i>
@@ -249,7 +231,7 @@ made an error.  I don't recall the specifics, but I'm
 sure it was one of the many typical algebra errors you
 list.
 
-</p></font><p><font size="1">
+</p><p>
 
 Because of the error, he eventually reached a point from
 which he could no longer proceed.  Rather than admitting
@@ -258,7 +240,7 @@ at the board for several seconds, then turned to the
 class and said, "...and the rest, young people, should be
 obvious."
 
-</font></p></blockquote> 
+</p></blockquote> 
 
 
 <a name="Unclear"></a>
@@ -603,7 +585,7 @@ I think that most students who harbor this belief do so only
 on an unconscious level; they would give it up if it were
 brought to their attention.
 [My thanks to 
-<a href="http://www.math.hmc.edu/~jacobsen/">Jon Jacobsen</a> 
+Jon Jacobsen
 for identifying this error.]
 
 </p><p>
@@ -631,7 +613,7 @@ Another reason that
 some students get confused on this point is that we read <nobr>"–x"</nobr> aloud
 as "minus x" or as "negative x".  The latter reading suggests to some students that
 the answer should be a negative number, but that's not right.
-[Suggested by <a href="http://darkwing.uoregon.edu/~ncp/index.html">Chris Phillips</a>.]
+[Suggested by Chris Phillips.]
 
 
 
@@ -881,8 +863,8 @@ the fraction
 
 is the same thing as (a+b)/(c+d).  If you omit either pair of parentheses from
 that last expression, you get something entirely different.  
-(Thanks to <a href="http://math.stanford.edu/~mark/">Mark 
-Meckes</a> for pointing out this possible explanation
+(Thanks to Mark 
+Meckes for pointing out this possible explanation
 of the origin of such errors.)  Perhaps some of
 the students' errors stem from such an omission of parentheses?  or a
 lack of understanding of how important those parentheses are?  That would
@@ -1092,7 +1074,7 @@ not learned the correct order of some operations.
 </p><p>
 
 Here is an example from
-<a href="http://www.fordham.edu/morrison/">Ian Morrison</a>:
+Ian Morrison:
 What is
 <nobr>–3<sup>2</sup>&nbsp;?</nobr>  Many students think that the
 expression means <nobr>(–3)<sup>2</sup>,</nobr> and so they arrive
@@ -1178,10 +1160,10 @@ is indicated by juxtaposition or a symbol:
 <li>3 / 5x is interpreted as 3/(5x), but
 </li><li> 3 / 5 * x is interpreted as (3/5) x.
 </li></ul>
-(Thanks to <a href="http://darkwing.uoregon.edu/~ncp/index.html">Chris
-Phillips</a> and
-<a href="http://www.district87.org/staff/cowderyt/">Thomas
-Cowdery</a>
+(Thanks to Chris
+Phillips and
+Thomas
+Cowdery
 for some of these examples and comments.)
 
 <p>
@@ -1239,7 +1221,7 @@ shows 2.41785163923 E24.  (Those are the answers to
 Thus, even the calculators
 made by one company don't all agree on their orders of
 operations.  When in doubt, use parentheses!  Thanks
-to <a href="http://dmth.utep.edu/dodge/">Bill Dodge</a> for this example.
+to Bill Dodge for this example.
 
 <a name="Consciousness"></a>
 </p><p></p><hr noshade=""><p>
@@ -1642,7 +1624,7 @@ little extra effort.
 </p><p>
 
 The extraneous roots error was brought to my attention by
-<a href="http://netdial.caribe.net/%7Erabeldin/Home.html">Dr. Richard Beldin</a>.
+Dr. Richard Beldin.
 Professor Beldin
 tells me that he gave a test heavily laced with
 extraneous roots problems, and warned the students that
@@ -1662,9 +1644,11 @@ on so many problems that they lost two letter grades on
 the overall the test score.
 <p></p>
 
-<a href="http://www.cwu.edu/~glasbys/">Professor Stephen Glasby</a> reports this interesting example of ignoring irreversibility.  We wish to prove 
+Professor Stephen Glasby reports this interesting example of ignoring irreversibility.  We wish to prove 
 <nobr>sin x</nobr> = <nobr>√(1 - cos<sup>2</sup> x).</nobr> We begin by squaring both sides of that equation; we obtain 
-<nobr>sin<sup>2</sup> x</nobr> = <nobr>1 - cos<sup>2</sup> x.</nobr> Rearrange terms to obtain <nobr>sin<sup>2</sup> x</nobr> + <nobr>cos<sup>2</sup> x</nobr> = 1. That's true, so apparently the proof is done. But it's not, because squaring both sides was irreversible. In fact, the equation <nobr>sin x</nobr> = <nobr>√(1 - cos<sup>2</sup> x)</nobr> that we've just "proved" isn't true -- for instance, try x = <nobr>- π/2.</nobr>
+<nobr>sin<sup>2</sup> x</nobr> = <nobr>1 - cos<sup>2</sup> x.</nobr> Rearrange terms to obtain <nobr>sin<sup>2</sup> x</nobr> + <nobr>cos<sup>2</sup> x</nobr> = 1.
+That's true, so apparently the proof is done. But it's not, because squaring both sides was irreversible. In fact, the equation
+<nobr>sin x</nobr> = <nobr>√(1 - cos<sup>2</sup> x)</nobr> that we've just "proved" isn't true -- for instance, try x = <nobr>- π/2.</nobr>
 
 <a name="Converse"></a>
 <p></p><hr noshade=""><p>
@@ -1796,7 +1780,7 @@ didn't go swimming at the beach today.
 Sometimes we replace a statement with its contrapositive,
 because it may be easier to prove, even if it is
 more complicated to state.
-(Thanks to <a href="http://at.yorku.ca/h/a/a/a/14.htm">Valery Mishkin</a>
+(Thanks to Valery Mishkin
 for bringing this class of errors to my attention.)
 
 
@@ -1910,7 +1894,7 @@ because they don't notice that some step is irreversible.
 
 
 
-For instance, the statement
+For instance, the statement 
 <nobr>x &gt; <img src="sqrtmin1.gif" alt="[image: square root of (x^2-1)]"></nobr>
 is <i>not</i> true for all real numbers x.  But
 if we didn't know that, we might come up with this
@@ -2313,16 +2297,6 @@ error by using the cube root button.
 
 </p><p>
 
-Dave Rusin has put together 
-<a href="http://www.math.niu.edu/%7Erusin/known-math/99/calc_errors">some 
-notes on the wide variety of
-errors one can make by not understanding one's calculator</a>.
-By the way, I'll take this opportunity to mention that Dave Rusin has
-put together a super website, 
-<a href="http://www.math-atlas.org/welcome.html">Mathematical
-Atlas: A gateway to Mathematics</a>, which offers definitions, 
-introductions, and links to all sorts of topics in math.
-
 
 </p><p></p><hr noshade=""><p>
 
@@ -2333,7 +2307,7 @@ introductions, and links to all sorts of topics in math.
 
 A formula or notation may work properly in  one context, but
 some students try to apply it in a  wider context, where it may
-not work properly at all.   <a href="http://www.maths.ex.ac.uk/%7Erjc/rjc.html">Robin Chapman</a>
+not work properly at all. Robin Chapman
 also calls this type of error "<b>crass formalism</b>."  Here
 is one example that he has mentioned:  
 
@@ -2514,7 +2488,7 @@ equation cautiously, we can say (informally) that
 be less misleading to write instead
 <nobr>1/∞ → 0</nobr>.
 (My thanks to
-<a href="http://www.matematik.su.se/%7Ehaberg/">Hans Aberg</a> for
+Hans Aberg for
 this suggestion and for several other suggestions on this
 web page.)
 
@@ -2557,7 +2531,7 @@ sophisticated analyses.
 
 
 </p><p></p><hr noshade="" width="50%"><p>Here is a common error mentioned by 
-<a href="http://www.maths.warwick.ac.uk/%7Estu/">Stuart Price</a>:
+Stuart Price:
 Some students
 seem to think that <nobr>lim<sub>n→∞</sub> (1+(1/n))<sup>n</sup> = 1.</nobr>
 Their reasoning is this:  
@@ -3122,14 +3096,6 @@ I teach calculus, I describe "dx" and "dy" as "pieces of the notation <nobr>dy/d
 with no independent meanings of their own.  I think that this approach
 is much kinder to the beginning students.</font>
 
-</p><p></p><hr noshade=""><p></p><hr noshade=""><p>
-
-<a href="http://www.camel.math.ca/Kabol/"><img src="candy.gif" width="100" height="100" border="0" align="left" hspace="10"></a>
-
-<font size="-1">This web page was selected as the "cool math web page of the week",
-for the week of May 22, 2002, by 
-<a href="http://www.camel.math.ca/Kabol/">KaBoL</a>.</font>
-<br clear="all">
 </p><p>
 
 </p></body></html>
