--- a/teaching/300/1-1.html
+++ b/teaching/300/1-1.html
@@ -79,7 +79,22 @@
 <span class="ltx_tag ltx_tag_subsubsection">1.1.2 </span>Beginning Activity 2 (Conditional Statements)</h4>
 
 <div id="S1.SS1.SSS2.p1" class="ltx_para">
-<p class="ltx_p">Given statements <math id="S1.SS1.SSS2.p1.m1" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> and <math id="S1.SS1.SSS2.p1.m2" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>, a statement of the form "If <math id="S1.SS1.SSS2.p1.m3" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> then <math id="S1.SS1.SSS2.p1.m4" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>" is called a conditional statement. It seems reasonable that the truth value (true or false) of the conditional statement "If <math id="S1.SS1.SSS2.p1.m5" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> then <math id="S1.SS1.SSS2.p1.m6" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>" depends on the truth values of <math id="S1.SS1.SSS2.p1.m7" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> and <math id="S1.SS1.SSS2.p1.m8" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>. The statement "If <math id="S1.SS1.SSS2.p1.m9" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> then <math id="S1.SS1.SSS2.p1.m10" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>" means that <math id="S1.SS1.SSS2.p1.m11" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> must be true whenever <math id="S1.SS1.SSS2.p1.m12" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> is true. The statement <math id="S1.SS1.SSS2.p1.m13" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> is called the hypothesis of the conditional statement, and the statement <math id="S1.SS1.SSS2.p1.m14" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> is called the conclusion of the conditional statement. We will now explore some examples.</p>
+<p class="ltx_p">Given statements <math id="S1.SS1.SSS2.p1.m1" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math>
+  and <math id="S1.SS1.SSS2.p1.m2" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>,
+  a statement of the form "If <math id="S1.SS1.SSS2.p1.m3" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math>
+  then <math id="S1.SS1.SSS2.p1.m4" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>" is called a conditional
+  statement. It seems reasonable that the truth value (true or false) of the conditional statement "If
+  <math id="S1.SS1.SSS2.p1.m5" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> then
+  <math id="S1.SS1.SSS2.p1.m6" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>" depends on the truth values of
+  <math id="S1.SS1.SSS2.p1.m7" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> and
+  <math id="S1.SS1.SSS2.p1.m8" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>. The statement "If
+  <math id="S1.SS1.SSS2.p1.m9" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> then
+  <math id="S1.SS1.SSS2.p1.m10" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>" means that
+  <math id="S1.SS1.SSS2.p1.m11" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> must be true whenever
+  <math id="S1.SS1.SSS2.p1.m12" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> is true. The statement
+  <math id="S1.SS1.SSS2.p1.m13" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> is called the hypothesis
+  of the conditional statement, and the statement <math id="S1.SS1.SSS2.p1.m14" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>
+  is called the conclusion of the conditional statement. We will now explore some examples.</p>
 </div>
 <div id="S1.SS1.SSS2.p2" class="ltx_para">
 <ol id="S1.I2" class="ltx_enumerate">
@@ -149,7 +164,7 @@
 <span class="ltx_tag ltx_tag_subsubsection">1.1.3 </span>Statements</h4>
 
 <div id="S1.SS1.SSS3.p1" class="ltx_para">
-<p class="ltx_p">As we saw in Beginning Activity 1, some sentences that are mathematical in nature often are not statements because we may not know precisely what a variable represents. Following are some more examples</p>
+<p class="ltx_p">As we saw in <a href="#S1.S11.S111">Beginning Activity 1</a>, some sentences that are mathematical in nature often are not statements because we may not know precisely what a variable represents. Following are some more examples</p>
 </div>
 <div id="S1.SS1.SSS3.p2" class="ltx_para">
 <ul id="S1.I3" class="ltx_itemize">
@@ -347,7 +362,7 @@
 </ul>
 </div>
 <div id="S1.SS1.SSS6.p8" class="ltx_para">
-<p class="ltx_p">The conditional statement <math id="S1.SS1.SSS6.p8.m1" class="ltx_Math" alttext="P\rightarrow Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">→</mo><mi>Q</mi></mrow></math> means that <math id="S1.SS1.SSS6.p8.m2" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> is true whenever <math id="S1.SS1.SSS6.p8.m3" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> is true. It says nothing about the truth value of <math id="S1.SS1.SSS6.p8.m4" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> when <math id="S1.SS1.SSS6.p8.m5" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> is false. Using this as a guide, we define the conditional statement <math id="S1.SS1.SSS6.p8.m6" class="ltx_Math" alttext="P\rightarrow Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">→</mo><mi>Q</mi></mrow></math> to be false only when <math id="S1.SS1.SSS6.p8.m7" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> is true and <math id="S1.SS1.SSS6.p8.m8" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> is false, that is, only when the hypothesis is true and the conclusion is false. In all other cases, <math id="S1.SS1.SSS6.p8.m9" class="ltx_Math" alttext="P\rightarrow Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">→</mo><mi>Q</mi></mrow></math> is true. This is summarized in Table 1.1, which is called a truth table for the conditional statement <math id="S1.SS1.SSS6.p8.m10" class="ltx_Math" alttext="P\rightarrow Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">→</mo><mi>Q</mi></mrow></math>. (In Table 1.1, T stands for "true" and F stands for "false.")</p>
+<p class="ltx_p">The conditional statement <math id="S1.SS1.SSS6.p8.m1" class="ltx_Math" alttext="P\rightarrow Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">→</mo><mi>Q</mi></mrow></math> means that <math id="S1.SS1.SSS6.p8.m2" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> is true whenever <math id="S1.SS1.SSS6.p8.m3" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> is true. It says nothing about the truth value of <math id="S1.SS1.SSS6.p8.m4" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> when <math id="S1.SS1.SSS6.p8.m5" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> is false. Using this as a guide, we define the conditional statement <math id="S1.SS1.SSS6.p8.m6" class="ltx_Math" alttext="P\rightarrow Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">→</mo><mi>Q</mi></mrow></math> to be false only when <math id="S1.SS1.SSS6.p8.m7" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> is true and <math id="S1.SS1.SSS6.p8.m8" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> is false, that is, only when the hypothesis is true and the conclusion is false. In all other cases, <math id="S1.SS1.SSS6.p8.m9" class="ltx_Math" alttext="P\rightarrow Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">→</mo><mi>Q</mi></mrow></math> is true. This is summarized in <a href="#S1.T1">Table 1.1</a>, which is called a truth table for the conditional statement <math id="S1.SS1.SSS6.p8.m10" class="ltx_Math" alttext="P\rightarrow Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">→</mo><mi>Q</mi></mrow></math>. (In Table 1.1, T stands for "true" and F stands for "false.")</p>
 </div>
 <figure id="S1.T1" class="ltx_table">
 <table class="ltx_tabular ltx_centering ltx_guessed_headers ltx_align_middle">
