--- a/teaching/300/1-1.html
+++ b/teaching/300/1-1.html
@@ -7,6 +7,13 @@
 <link rel="stylesheet" href="LaTeXML.css" type="text/css">
 <link rel="stylesheet" href="ltx-article.css" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<style>
+        p {
+            font-family: 'Arial';
+            font-size: 12px;
+            color: black;
+        }
+</style>
 </head>
 <body>
 <div class="ltx_page_main">
@@ -164,7 +171,7 @@
 <span class="ltx_tag ltx_tag_subsubsection">1.1.3 </span>Statements</h4>
 
 <div id="S1.SS1.SSS3.p1" class="ltx_para">
-<p class="ltx_p">As we saw in <a href="#S1.S11.S111">Beginning Activity 1</a>, some sentences that are mathematical in nature often are not statements because we may not know precisely what a variable represents. Following are some more examples</p>
+<p class="ltx_p">As we saw in <a href="#S1.SS1.SSS1">Beginning Activity 1</a>, some sentences that are mathematical in nature often are not statements because we may not know precisely what a variable represents. Following are some more examples</p>
 </div>
 <div id="S1.SS1.SSS3.p2" class="ltx_para">
 <ul id="S1.I3" class="ltx_itemize">
