--- a/teaching/300/1-1.html
+++ b/teaching/300/1-1.html
@@ -10,8 +10,6 @@
 <style>
         article {
             font-family: 'Arial';
-            font-size: 12px;
-            color: black;
         }
 </style>
 </head>
@@ -408,7 +406,7 @@
 <div id="S1.SS1.SSS6.p9" class="ltx_para">
 <p class="ltx_p">The important thing to remember is that the conditional statement <math id="S1.SS1.SSS6.p9.m1" class="ltx_Math" alttext="P\rightarrow Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">→</mo><mi>Q</mi></mrow></math> has its own truth value. It is either true or false (and not both). Its truth value depends on the truth values for <math id="S1.SS1.SSS6.p9.m2" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> and <math id="S1.SS1.SSS6.p9.m3" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>, but some find it a bit puzzling that the conditional statement is considered to be true when the hypothesis <math id="S1.SS1.SSS6.p9.m4" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> is false. We will provide a justification for this through the use of an example.</p>
 </div>
-<div id="S1.SS1.SSS6.p10" class="ltx_para">
+<div id="Example_1.3" class="ltx_para">
 <p class="ltx_p"><span class="ltx_text ltx_font_bold">Example</span> 1.3 Suppose that I say
 <br class="ltx_break">"If it is not raining, then Daisy is riding her bike."</p>
 </div>
@@ -664,7 +662,7 @@
 <p class="ltx_p">Notice that these so-called closure properties are defined in terms of conditional statements. This means that if we can find one instance where the hypothesis is true and the conclusion is false, then the conditional statement is false.</p>
 </div>
 </section>
-<section id="S1.SS1.SSS11" class="ltx_subsubsection">
+<section id="Example_1.6" class="ltx_subsubsection">
 <h4 class="ltx_title ltx_title_subsubsection">
 <span class="ltx_tag ltx_tag_subsubsection">1.1.11 </span>Example 1.6 (Closure)</h4>
 
@@ -728,7 +726,7 @@
 </ol>
 </div>
 </section>
-<section id="S1.SS1.SSS13" class="ltx_subsubsection">
+<section id="Exercises_1.1" class="ltx_subsubsection">
 <h4 class="ltx_title ltx_title_subsubsection">
 <span class="ltx_tag ltx_tag_subsubsection">1.1.13 </span>Exercises for Section 1.1</h4>
 
