Update 1-1.html screenreader ok, change table label

--- a/teaching/300/1-1.html
+++ b/teaching/300/1-1.html
@@ -401,7 +401,7 @@
 </tr>
 </tbody>
 </table>
-<figcaption class="ltx_caption ltx_centering"><span class="ltx_tag ltx_tag_table">Table 1: </span>Table 1.1: Truth Table for <math id="S1.T1.m5" class="ltx_Math" alttext="P\rightarrow Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">→</mo><mi>Q</mi></mrow></math></figcaption>
+<figcaption class="ltx_caption ltx_centering">Table 1.1: Truth Table for <math id="S1.T1.m5" class="ltx_Math" alttext="P\rightarrow Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">→</mo><mi>Q</mi></mrow></math></figcaption>
 </figure>
 <div id="S1.SS1.SSS6.p9" class="ltx_para">
 <p class="ltx_p">The important thing to remember is that the conditional statement <math id="S1.SS1.SSS6.p9.m1" class="ltx_Math" alttext="P\rightarrow Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">→</mo><mi>Q</mi></mrow></math> has its own truth value. It is either true or false (and not both). Its truth value depends on the truth values for <math id="S1.SS1.SSS6.p9.m2" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> and <math id="S1.SS1.SSS6.p9.m3" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>, but some find it a bit puzzling that the conditional statement is considered to be true when the hypothesis <math id="S1.SS1.SSS6.p9.m4" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> is false. We will provide a justification for this through the use of an example.</p>
