Update 1-2.html Font + table captions and headers

--- a/teaching/300/1-2.html
+++ b/teaching/300/1-2.html
@@ -7,6 +7,11 @@
 <link rel="stylesheet" href="LaTeXML.css" type="text/css">
 <link rel="stylesheet" href="ltx-article.css" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<style>
+        article {
+            font-family: 'Arial';
+        }
+</style>
 </head>
 <body>
 <div class="ltx_page_main">
@@ -142,9 +147,9 @@
 <thead class="ltx_thead">
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_column ltx_th_row ltx_border_l ltx_border_r ltx_border_t">Identity Properties</th>
-<th class="ltx_td ltx_align_left ltx_th ltx_th_column ltx_border_r ltx_border_t">
+<td class="ltx_td ltx_align_left ltx_th ltx_th_column ltx_border_r ltx_border_t">
 <math id="S1.T1.m1" class="ltx_Math" alttext="x+0=x" display="inline"><mrow><mrow><mi>x</mi><mo>+</mo><mn>0</mn></mrow><mo>=</mo><mi>x</mi></mrow></math> and <math id="S1.T1.m2" class="ltx_Math" alttext="x\cdot 1=x" display="inline"><mrow><mrow><mi>x</mi><mo lspace="0.222em" rspace="0.222em">⋅</mo><mn>1</mn></mrow><mo>=</mo><mi>x</mi></mrow></math>
-</th>
+</td>
 </tr>
 </thead>
 <tbody class="ltx_tbody">
@@ -173,7 +178,7 @@
 </tr>
 </tbody>
 </table>
-<figcaption class="ltx_caption ltx_centering"><span class="ltx_tag ltx_tag_table">Table 1: </span>Table 1.2: Properties of the Real Numbers</figcaption>
+<figcaption class="ltx_caption ltx_centering">Table 1.2: Properties of the Real Numbers</figcaption>
 </figure>
 </section>
 <section id="S1.SS2.SSS4" class="ltx_subsubsection">
@@ -200,9 +205,9 @@
 <table class="ltx_tabular ltx_centering ltx_align_middle">
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
-<td class="ltx_td ltx_align_left ltx_border_l ltx_border_r ltx_border_t">Step</td>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Know</td>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Reason</td>
+<th class="ltx_td ltx_align_left ltx_border_l ltx_border_r ltx_border_t">Step</th>
+<th class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Know</th>
+<th class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Reason</th>
 </tr>
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left ltx_border_l ltx_border_r ltx_border_t"><math id="S1.SS2.SSS4.m1" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math></td>
@@ -250,9 +255,9 @@
 <table class="ltx_tabular ltx_centering ltx_align_middle">
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
-<td class="ltx_td ltx_align_left ltx_border_l ltx_border_r ltx_border_t">Step</td>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Know</td>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Reason</td>
+<th class="ltx_td ltx_align_left ltx_border_l ltx_border_r ltx_border_t">Step</th>
+<th class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Know</th>
+<th class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Reason</th>
 </tr>
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left ltx_border_l ltx_border_r ltx_border_t"><math id="S1.SS2.SSS4.m10" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math></td>
@@ -355,9 +360,9 @@
 <table class="ltx_tabular ltx_centering ltx_align_middle">
 <tbody class="ltx_tbody">
 <tr class="ltx_tr">
-<td class="ltx_td ltx_align_left ltx_border_l ltx_border_r ltx_border_t">Step</td>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Know</td>
-<td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Reason</td>
+<th class="ltx_td ltx_align_left ltx_border_l ltx_border_r ltx_border_t">Step</th>
+<th class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Know</th>
+<th class="ltx_td ltx_align_left ltx_border_r ltx_border_t">Reason</th>
 </tr>
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left ltx_border_l ltx_border_r ltx_border_t"><math id="S1.SS2.SSS4.m21" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math></td>
@@ -368,7 +373,7 @@
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left ltx_border_l ltx_border_r ltx_border_t">P1</td>
 <td class="ltx_td ltx_align_left ltx_border_r ltx_border_t">
-<table class="ltx_tabular ltx_align_middle">
+<table class="ltx_tabular ltx_align_middle" role="presentation">
 <tr class="ltx_tr">
 <td class="ltx_td ltx_align_left">There exist integers <math id="S1.SS2.SSS4.m24" class="ltx_Math" alttext="m" display="inline"><mi>m</mi></math> and <math id="S1.SS2.SSS4.m25" class="ltx_Math" alttext="n" display="inline"><mi>n</mi></math>
 </td>
