Update 1-2.html hash links

--- a/teaching/300/1-2.html
+++ b/teaching/300/1-2.html
@@ -143,7 +143,7 @@
 <p class="ltx_p">For all real numbers <math id="S1.SS2.SSS3.p2.m1" class="ltx_Math" alttext="x" display="inline"><mi>x</mi></math>, <math id="S1.SS2.SSS3.p2.m2" class="ltx_Math" alttext="y" display="inline"><mi>y</mi></math>, and <math id="S1.SS2.SSS3.p2.m3" class="ltx_Math" alttext="z" display="inline"><mi>z</mi></math>,</p>
 </div>
 <figure id="S1.T1" class="ltx_table">
-<table class="ltx_tabular ltx_centering ltx_guessed_headers ltx_align_middle">
+<table id="Table_1.2" class="ltx_tabular ltx_centering ltx_guessed_headers ltx_align_middle">
 <thead class="ltx_thead">
 <tr class="ltx_tr">
 <th class="ltx_td ltx_align_left ltx_th ltx_th_column ltx_th_row ltx_border_l ltx_border_r ltx_border_t">Identity Properties</th>
@@ -424,7 +424,7 @@
 <p class="ltx_p">It is very important to realize that we have only constructed an outline of a proof. Mathematical proofs are not written in table form. They are written in
 <br class="ltx_break">narrative form using complete sentences and correct paragraph structure, and they follow certain conventions used in writing mathematics. In addition, most proofs are written only from the forward perspective. That is, although the use of the backward process was essential in discovering the proof, when we write the proof in narrative form, we use the forward process described in the preceding table. A completed proof follows.</p>
 </div>
-<div id="S1.SS2.SSS4.p19" class="ltx_para">
+<div id="Theorem_1.8" class="ltx_para">
 <p class="ltx_p"><span class="ltx_text ltx_font_bold">Theorem</span> 1.8. If <math id="S1.SS2.SSS4.p19.m1" class="ltx_Math" alttext="x" display="inline"><mi>x</mi></math> and <math id="S1.SS2.SSS4.p19.m2" class="ltx_Math" alttext="y" display="inline"><mi>y</mi></math> are odd integers, then <math id="S1.SS2.SSS4.p19.m3" class="ltx_Math" alttext="x\cdot y" display="inline"><mrow><mi>x</mi><mo lspace="0.222em" rspace="0.222em">⋅</mo><mi>y</mi></mrow></math> is an odd integer.</p>
 </div>
 <div id="S1.SS2.SSS4.p20" class="ltx_para">
@@ -1340,7 +1340,7 @@
 <li id="S1.I16.i2" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_item">•</span> 
 <div id="S1.I16.i2.p1" class="ltx_para">
-<p class="ltx_p"><span class="ltx_text ltx_font_bold">Theorem</span> 1.8. If <math id="S1.I16.i2.p1.m1" class="ltx_Math" alttext="x" display="inline"><mi>x</mi></math> is an odd integer and <math id="S1.I16.i2.p1.m2" class="ltx_Math" alttext="y" display="inline"><mi>y</mi></math> is an odd integer, then <math id="S1.I16.i2.p1.m3" class="ltx_Math" alttext="x\cdot y" display="inline"><mrow><mi>x</mi><mo lspace="0.222em" rspace="0.222em">⋅</mo><mi>y</mi></mrow></math> is an odd integer.</p>
+<p class="ltx_p"><a href="#Theorem_1.8"><span class="ltx_text ltx_font_bold">Theorem</span> 1.8.</a> If <math id="S1.I16.i2.p1.m1" class="ltx_Math" alttext="x" display="inline"><mi>x</mi></math> is an odd integer and <math id="S1.I16.i2.p1.m2" class="ltx_Math" alttext="y" display="inline"><mi>y</mi></math> is an odd integer, then <math id="S1.I16.i2.p1.m3" class="ltx_Math" alttext="x\cdot y" display="inline"><mrow><mi>x</mi><mo lspace="0.222em" rspace="0.222em">⋅</mo><mi>y</mi></mrow></math> is an odd integer.</p>
 </div>
 </li>
 <li id="S1.I16.i3" class="ltx_item" style="list-style-type:none;">
