Update 1-1.html with missing page ~line 400

--- a/teaching/300/1-1.html
+++ b/teaching/300/1-1.html
@@ -366,6 +366,93 @@
 </li>
 </ul>
 </div>
+<div id="p1" class="ltx_para">
+<ul id="S0.I1" class="ltx_itemize">
+<li id="S0.I1.i1" class="ltx_item" style="list-style-type:none;">
+<span class="ltx_tag ltx_tag_item">•</span> 
+<div id="S0.I1.i1.p1" class="ltx_para">
+<p class="ltx_p">Cooperation and brainstorming. Working together is often more fruitful than working alone. When we work with someone else, we can compare notes and articulate our ideas. Thinking out loud is often a useful brainstorming method that helps generate new ideas.</p>
+</div>
+</li>
+</ul>
+</div>
+<section id="Sx1" class="ltx_section">
+<h2 class="ltx_title ltx_title_section">Progress Check 1.2 (Explorations)</h2>
+
+<div id="Sx1.p1" class="ltx_para">
+<p class="ltx_p">Use the techniques of exploration to investigate each of the following statements. Can you make a conjecture as to whether the statement is true or false? Can you determine whether it is true or false?</p>
+</div>
+<div id="Sx1.p2" class="ltx_para">
+<ol id="Sx1.I2" class="ltx_enumerate">
+<li id="Sx1.I2.i1" class="ltx_item" style="list-style-type:none;">
+<span class="ltx_tag ltx_tag_item">1.</span> 
+<div id="Sx1.I2.i1.p1" class="ltx_para">
+<p class="ltx_p"><math id="Sx1.I2.i1.p1.m1" class="ltx_Math" alttext="(a+b)^{2}=a^{2}+b^{2}" display="inline"><mrow><msup><mrow><mo stretchy="false">(</mo><mrow><mi>a</mi><mo>+</mo><mi>b</mi></mrow><mo stretchy="false">)</mo></mrow><mn>2</mn></msup><mo>=</mo><mrow><msup><mi>a</mi><mn>2</mn></msup><mo>+</mo><msup><mi>b</mi><mn>2</mn></msup></mrow></mrow></math>, for all real numbers <math id="Sx1.I2.i1.p1.m2" class="ltx_Math" alttext="a" display="inline"><mi>a</mi></math> and <math id="Sx1.I2.i1.p1.m3" class="ltx_Math" alttext="b" display="inline"><mi>b</mi></math>.</p>
+</div>
+</li>
+<li id="Sx1.I2.i2" class="ltx_item" style="list-style-type:none;">
+<span class="ltx_tag ltx_tag_item">2.</span> 
+<div id="Sx1.I2.i2.p1" class="ltx_para">
+<p class="ltx_p">There are integers <math id="Sx1.I2.i2.p1.m1" class="ltx_Math" alttext="x" display="inline"><mi>x</mi></math> and <math id="Sx1.I2.i2.p1.m2" class="ltx_Math" alttext="y" display="inline"><mi>y</mi></math> such that <math id="Sx1.I2.i2.p1.m3" class="ltx_Math" alttext="2x+5y=41" display="inline"><mrow><mrow><mrow><mn>2</mn><mo>⁢</mo><mi>x</mi></mrow><mo>+</mo><mrow><mn>5</mn><mo>⁢</mo><mi>y</mi></mrow></mrow><mo>=</mo><mn>41</mn></mrow></math>.</p>
+</div>
+</li>
+<li id="Sx1.I2.i3" class="ltx_item" style="list-style-type:none;">
+<span class="ltx_tag ltx_tag_item">3.</span> 
+<div id="Sx1.I2.i3.p1" class="ltx_para">
+<p class="ltx_p">If <math id="Sx1.I2.i3.p1.m1" class="ltx_Math" alttext="x" display="inline"><mi>x</mi></math> is an even integer, then <math id="Sx1.I2.i3.p1.m2" class="ltx_Math" alttext="x^{2}" display="inline"><msup><mi>x</mi><mn>2</mn></msup></math> is an even integer.</p>
+</div>
+</li>
+<li id="Sx1.I2.i4" class="ltx_item" style="list-style-type:none;">
+<span class="ltx_tag ltx_tag_item">4.</span> 
+<div id="Sx1.I2.i4.p1" class="ltx_para">
+<p class="ltx_p">If <math id="Sx1.I2.i4.p1.m1" class="ltx_Math" alttext="x" display="inline"><mi>x</mi></math> and <math id="Sx1.I2.i4.p1.m2" class="ltx_Math" alttext="y" display="inline"><mi>y</mi></math> are odd integers, then <math id="Sx1.I2.i4.p1.m3" class="ltx_Math" alttext="x\cdot y" display="inline"><mrow><mi>x</mi><mo lspace="0.222em" rspace="0.222em">⋅</mo><mi>y</mi></mrow></math> is an odd integer.</p>
+</div>
+</li>
+</ol>
+</div>
+</section>
+<section id="Sx2" class="ltx_section">
+<h2 class="ltx_title ltx_title_section">Conditional Statements</h2>
+
+<div id="Sx2.p1" class="ltx_para">
+<p class="ltx_p">We had our first encounter with conditional statements in Beginning Activity 2. Since conditional statements are the most important type of statement in mathematics, we give a more formal definition.</p>
+</div>
+<div id="Sx2.p2" class="ltx_para">
+<p class="ltx_p"><span class="ltx_text ltx_font_bold">Definition.</span> A conditional statement is a statement that can be written in the form "If <math id="Sx2.p2.m1" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> then <math id="Sx2.p2.m2" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>," where <math id="Sx2.p2.m3" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> and <math id="Sx2.p2.m4" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> are sentences. For this conditional statement, <math id="Sx2.p2.m5" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> is called the hypothesis and <math id="Sx2.p2.m6" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> is called the conclusion.</p>
+</div>
+<div id="Sx2.p3" class="ltx_para">
+<p class="ltx_p">Intuitively, "If <math id="Sx2.p3.m1" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> then <math id="Sx2.p3.m2" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> " means that <math id="Sx2.p3.m3" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> must be true whenever <math id="Sx2.p3.m4" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> is true. Because conditional statements are used so often, a symbolic shorthand notation is used to represent the conditional statement "If <math id="Sx2.p3.m5" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> then <math id="Sx2.p3.m6" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>." We will use the notation <math id="Sx2.p3.m7" class="ltx_Math" alttext="P\rightarrow Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">→</mo><mi>Q</mi></mrow></math> to represent "If <math id="Sx2.p3.m8" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> then <math id="Sx2.p3.m9" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>." When <math id="Sx2.p3.m10" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> and <math id="Sx2.p3.m11" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> are statements, it seems reasonable that the truth value (true or false) of the conditional statement <math id="Sx2.p3.m12" class="ltx_Math" alttext="P\rightarrow Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">→</mo><mi>Q</mi></mrow></math> depends on the truth values of <math id="Sx2.p3.m13" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> and <math id="Sx2.p3.m14" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>. There are four cases to consider:</p>
+</div>
+<div id="Sx2.p4" class="ltx_para">
+<ul id="Sx2.I3" class="ltx_itemize">
+<li id="Sx2.I3.i1" class="ltx_item" style="list-style-type:none;">
+<span class="ltx_tag ltx_tag_item">•</span> 
+<div id="Sx2.I3.i1.p1" class="ltx_para">
+<p class="ltx_p"><math id="Sx2.I3.i1.p1.m1" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> is true and <math id="Sx2.I3.i1.p1.m2" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> is true.</p>
+</div>
+</li>
+<li id="Sx2.I3.i2" class="ltx_item" style="list-style-type:none;">
+<span class="ltx_tag ltx_tag_item">•</span> 
+<div id="Sx2.I3.i2.p1" class="ltx_para">
+<p class="ltx_p"><math id="Sx2.I3.i2.p1.m1" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> is false and <math id="Sx2.I3.i2.p1.m2" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> is true.</p>
+</div>
+</li>
+<li id="Sx2.I3.i3" class="ltx_item" style="list-style-type:none;">
+<span class="ltx_tag ltx_tag_item">•</span> 
+<div id="Sx2.I3.i3.p1" class="ltx_para">
+<p class="ltx_p"><math id="Sx2.I3.i3.p1.m1" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> is true and <math id="Sx2.I3.i3.p1.m2" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> is false.</p>
+</div>
+</li>
+<li id="Sx2.I3.i4" class="ltx_item" style="list-style-type:none;">
+<span class="ltx_tag ltx_tag_item">•</span> 
+<div id="Sx2.I3.i4.p1" class="ltx_para">
+<p class="ltx_p"><math id="Sx2.I3.i4.p1.m1" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> is false and <math id="Sx2.I3.i4.p1.m2" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> is false.</p>
+</div>
+</li>
+</ul>
+<div class="ltx_pagination ltx_role_newpage"></div>
+</div>
+
 <div id="S1.SS1.SSS6.p8" class="ltx_para">
 <p class="ltx_p">The conditional statement <math id="S1.SS1.SSS6.p8.m1" class="ltx_Math" alttext="P\rightarrow Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">→</mo><mi>Q</mi></mrow></math> means that <math id="S1.SS1.SSS6.p8.m2" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> is true whenever <math id="S1.SS1.SSS6.p8.m3" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> is true. It says nothing about the truth value of <math id="S1.SS1.SSS6.p8.m4" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> when <math id="S1.SS1.SSS6.p8.m5" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> is false. Using this as a guide, we define the conditional statement <math id="S1.SS1.SSS6.p8.m6" class="ltx_Math" alttext="P\rightarrow Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">→</mo><mi>Q</mi></mrow></math> to be false only when <math id="S1.SS1.SSS6.p8.m7" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> is true and <math id="S1.SS1.SSS6.p8.m8" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> is false, that is, only when the hypothesis is true and the conclusion is false. In all other cases, <math id="S1.SS1.SSS6.p8.m9" class="ltx_Math" alttext="P\rightarrow Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">→</mo><mi>Q</mi></mrow></math> is true. This is summarized in <a href="#S1.T1">Table 1.1</a>, which is called a truth table for the conditional statement <math id="S1.SS1.SSS6.p8.m10" class="ltx_Math" alttext="P\rightarrow Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">→</mo><mi>Q</mi></mrow></math>. (In Table 1.1, T stands for "true" and F stands for "false.")</p>
 </div>
