Update 1-1.html extra hash for Progress 1.2

--- a/teaching/300/1-1.html
+++ b/teaching/300/1-1.html
@@ -376,7 +376,7 @@
 </li>
 </ul>
 </div>
-<section id="Sx1" class="ltx_section">
+<section id="Progress_1.2" class="ltx_section">
 <h2 class="ltx_title ltx_title_section">Progress Check 1.2 (Explorations)</h2>
 
 <div id="Sx1.p1" class="ltx_para">
