Update 2-1.html Font/table/hash edits

--- a/teaching/300/2-1.html
+++ b/teaching/300/2-1.html
@@ -7,6 +7,11 @@
 <link rel="stylesheet" href="LaTeXML.css" type="text/css">
 <link rel="stylesheet" href="ltx-article.css" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <style>
+    article {
+      font-family: "Arial";
+    }
+  </style>
 </head>
 <body>
 <div class="ltx_page_main">
@@ -51,7 +56,7 @@
 <span class="ltx_tag ltx_tag_item">•</span> 
 <div id="S2.I1.i4.p1" class="ltx_para">
 <p class="ltx_p">The implication or conditional is the statement "If <math id="S2.I1.i4.p1.m1" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> then <math id="S2.I1.i4.p1.m2" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>" and is denoted by <math id="S2.I1.i4.p1.m3" class="ltx_Math" alttext="P\rightarrow Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">→</mo><mi>Q</mi></mrow></math>. The statement <math id="S2.I1.i4.p1.m4" class="ltx_Math" alttext="P\rightarrow Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">→</mo><mi>Q</mi></mrow></math> is often read as "<math id="S2.I1.i4.p1.m5" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> implies <math id="S2.I1.i4.p1.m6" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math>,"
-<br class="ltx_break">and we have seen in Section 1.1 that <math id="S2.I1.i4.p1.m7" class="ltx_Math" alttext="P\rightarrow Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">→</mo><mi>Q</mi></mrow></math> is false only when <math id="S2.I1.i4.p1.m8" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> is true and <math id="S2.I1.i4.p1.m9" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> is false.</p>
+<br class="ltx_break">and we have seen in <a href="https://johnweeks03.github.io/teaching/300/2-1.html">Section 1.1</a> that <math id="S2.I1.i4.p1.m7" class="ltx_Math" alttext="P\rightarrow Q" display="inline"><mrow><mi>P</mi><mo stretchy="false">→</mo><mi>Q</mi></mrow></math> is false only when <math id="S2.I1.i4.p1.m8" class="ltx_Math" alttext="P" display="inline"><mi>P</mi></math> is true and <math id="S2.I1.i4.p1.m9" class="ltx_Math" alttext="Q" display="inline"><mi>Q</mi></math> is false.</p>
 </div>
 </li>
 </ul>
@@ -422,7 +427,7 @@
 </tr>
 </tbody>
 </table>
-<figcaption class="ltx_caption ltx_centering"><span class="ltx_tag ltx_tag_table">Table 1: </span>Table 2.1: Truth Values for Common Connectives</figcaption>
+<figcaption id="Table_2.1" class="ltx_caption ltx_centering">Table 2.1: Truth Values for Common Connectives</figcaption>
 </figure>
 </section>
 <section id="S2.SS1.SSS4" class="ltx_subsubsection">
@@ -654,7 +659,7 @@
 </tr>
 </tbody>
 </table>
-<figcaption class="ltx_caption ltx_centering"><span class="ltx_tag ltx_tag_table">Table 2: </span>Table 2.2: Truth Table for <math id="S2.T2.m8" class="ltx_Math" alttext="(P\wedge\neg Q)\rightarrow R" display="inline"><mrow><mrow><mo stretchy="false">(</mo><mrow><mi>P</mi><mo>∧</mo><mrow><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow></mrow><mo stretchy="false">)</mo></mrow><mo stretchy="false">→</mo><mi>R</mi></mrow></math></figcaption>
+<figcaption id="Table_2.2">class="ltx_caption ltx_centering">Table 2.2: Truth Table for <math id="S2.T2.m8" class="ltx_Math" alttext="(P\wedge\neg Q)\rightarrow R" display="inline"><mrow><mrow><mo stretchy="false">(</mo><mrow><mi>P</mi><mo>∧</mo><mrow><mo rspace="0.167em">¬</mo><mi>Q</mi></mrow></mrow><mo stretchy="false">)</mo></mrow><mo stretchy="false">→</mo><mi>R</mi></mrow></math></figcaption>
 </figure>
 <div id="S2.SS1.SSS6.p5" class="ltx_para">
 <ul id="S2.I10" class="ltx_itemize">
